--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Mewerton Melo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
